--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -30,7 +30,7 @@
         <div class="card o-hidden border-0 shadow-lg my-5">
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
-            <div class="colum">
+            <div class="row">
               <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
               <div class="col-lg-6">
                 <div class="p-5">
@@ -53,16 +53,7 @@
                       </div>
                     </div>
                     <div class="form-group">                      
-                      <select id="projects" class="custom-select">
-                        <option selected>Seleccione ambiente...</option>
-                        <option  id="1">Desarrollo</option>
-                        <option  id="2">Producción</option>
-                        <option  id="3">Local</option>
-                      </select>
-                      <div class="invalid-feedback projects" style="display: none; color: red">
-                        Seleccion un proyecto porfavor.
-                      </div>
-                      <div class="p-2">
+                      <div class="p-1">
                         <a href="#" class="btn btn-primary btn-user btn-block" id="btnLogin">
                           Iniciar Sesión
                         </a>
