--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -3,20 +3,21 @@
 administrar todos los productos que existen en el sistema.`, subTitle:"Lista de productos", icon: "fas fa-table"}); -%>
 
 <div class="table-responsive">
-  <table class="table table-bordered" id="table-productos" width="100%" cellspacing="0">
+  <table class="table table-bordered" id="table-products" width="100%" cellspacing="0">
     <thead>
       <tr>
         <th>Categoría</th>
         <th>Nombre</th>
         <th>Precio</th>
         <th>Seleccionar </th>
-        <th>Agregar garantía extendida</th>
+        <!-- <th>Agregar garantía extendida</th> -->
       </tr>
     </thead>
   </table>
 </div>
 
-<!-- Scripts -->
-<script src="./views_js/products.js"></script>
+<%- include('./layout/bodyFooterBtn', {btnText: "Agregar garantía a seleccionados"}); -%>
 
 <%- include('./layout/footer'); -%>
+<!-- Scripts -->
+<script src="./views_js/products.js"></script>
