--- a/src/views/layout/bodyFooterBtn.ejs
+++ b/src/views/layout/bodyFooterBtn.ejs
@@ -7,7 +7,7 @@
     <i class="fas fa-plus"></i> <%-btnText-%>
   </button>
   <button class="btn btn-success float-left" type="button" id="btnSelect">
-    <label><input type="checkbox" id="checkAll"/> Seleccionar todos los productos </label>
+    <label> Seleccionar todos los productos </label>
   </button>
 </div>
 <div class="row mb-3"></div>
