--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -10,7 +10,7 @@ administrar todos los productos que existen en el sistema.`, subTitle:"Lista de 
         <th>Nombre</th>
         <th>Precio</th>
         <th>Seleccionar </th>
-        <!-- <th>Agregar garantía extendida</th> -->
+        <th>Eliminar</th>
       </tr>
     </thead>
   </table>
