--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -79,7 +79,7 @@
     <script src="./styles/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="./js/sb-admin-2.min.js"></script>
+    <script src="./styles/js/sb-admin-2.min.js"></script>
     <script src="./views_js/login.js"></script>
 
 </body>
